--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "symfony/finder": "^5.3",
     "symfony/framework-bundle": "^5.3",
     "symfony/http-client": "^5.3",
+    "symfony/security-bundle": "^5.3",
     "symfony/serializer-pack": "^1.0",
     "symfony/validator": "^5.3",
     "symfony/yaml": "^5.3"
